syntax = "proto3";

package QS.Cloud.WearLk.Manage;

service EmailManager {
    rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
}

// Отправка
message SendEmailRequest {
    repeated EmailMessage messages = 1;
}

message EmailMessage {
    string address = 1;
    string subject = 2;
    string text = 3;
}

message SendEmailResponse {
    string results = 1;
}
